# BitseryBenchmarking

./: .cproject  .gitmodules  .project  CMakeLists.txt  README.md
Src/: main.cpp
